@@ -254,6 +254,14 @@ endif
 endif
 endif
 
+ifeq ($(UNAME),Linux)
+IS_RPI                  := $(shell grep -q Raspberry /proc/cpuinfo && echo 1 || echo 0)
+
+ifeq ($(IS_RPI),1)
+CFLAGS                  += -mcpu=cortex-a72
+endif
+endif
+
 CFLAGS                  += -pipe -Iinclude/ -IOpenCL/
 
 # LZMA
